# le3d

./: .appveyor.yml  .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  LICENSE  README.md  amiga.cmake  le3d.cppcheck
cmake/Modules/: CMakeASM-VASMInformation.cmake  CMakeDetermineASM-VASMCompiler.cmake  CMakeTestASM-VASMCompiler.cmake  bool2int.cmake  le3d-options.cmake
docs/: Doxyfile  _b_u_i_l_d_i_n_g_8md.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  ammx_8h.html  ammx_8h_source.html  annotated.html  bitmap_8cpp.html  bitmap_8h.html  bitmap_8h_source.html  bmpcache_8cpp.html  bmpcache_8h.html  bmpcache_8h_source.html  bmpfile_8cpp.html  bmpfile_8h.html  bmpfile_8h_source.html  bset_8cpp.html  bset_8h.html  bset_8h_source.html  car_8cpp.html  car_8h.html  car_8h_source.html  class_car-members.html  class_car.html  class_le_b_set-members.html  class_le_b_set.html  class_le_bitmap-members.html  class_le_bitmap.html  class_le_bmp_cache-members.html  class_le_bmp_cache.html  class_le_bmp_file-members.html  class_le_bmp_file.html  class_le_bmp_font-members.html  class_le_bmp_font.html  class_le_color-members.html  class_le_color.html  class_le_draw-members.html  class_le_draw.html  class_le_game_pad-members.html  (+356 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  (+71 more)
doxygen/: Doxyfile
doxygen/html/: _r_e_a_d_m_e_8md.html  annotated.html  bitmap_8cpp.html  bmpcache_8h_source.html  bmpfile_8cpp.html  bmpfile_8h_source.html  bset_8h.html  buckguy_8cpp.html  class_le_b_set.html  class_le_bitmap-members.html  class_le_bitmap.html  class_le_bmp_cache-members.html  class_le_bmp_font.html  class_le_draw-members.html  class_le_game_pad.html  class_le_light.html  class_le_rasterizer-members.html  class_le_renderer-members.html  class_le_timing-members.html  class_le_timing.html  class_le_tri_list-members.html  class_le_ver_list-members.html  class_le_ver_list.html  class_le_window-members.html  classes.html  dir_21d72ee334cc217bb344f54a9416e1c1.html  dir_2c1d6db3d9f7fae17ee5d5f3da5af3fc.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  draw_8h.html  draw_8h_source.html  functions.html  functions_func.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_o.html  functions_type.html  functions_u.html  functions_vars.html  (+59 more)
doxygen/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_8.js  all_c.js  all_d.js  all_e.js  defines_1.js  defines_4.js  defines_6.js  enums_0.js  enumvalues_1.js  files_0.js  files_2.js  files_5.js  files_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_f.js  namespaces_0.js  pages_1.js  typedefs_1.js  variables_11.js  variables_12.js  variables_6.js  variables_7.js  variables_9.js  (+2 more)
engine/: .gitignore  bitmap.cpp  bitmap.h  bmpcache.cpp  bmpcache.h  bmpfile.cpp  bmpfile.h  bset.cpp  bset.h  color.h  config.h  config.h.in  draw.cpp  draw.h  draw_amiga.cpp  draw_unix.cpp  draw_win.cpp  gamepad.cpp  gamepad.h  gamepad_amiga.cpp  gamepad_mac.cpp  gamepad_unix.cpp  gamepad_win.cpp  geometry.cpp  geometry.h  geometry_scalar.h  geometry_simd.h  global.cpp  global.h  le3d.h  light.cpp  light.h  mesh.cpp  mesh.h  meshcache.cpp  meshcache.h  objfile.cpp  objfile.cpp.orig  objfile.h  rasterizer.cpp  (+21 more)
engine/amiga/: missing-math-impl.cpp
engine/ammx/: ammx.h  ammx.s
engine/fillers/float/ammx/: flattexzc.h
engine/fillers/float/ref/: flattexalphazc.h  flattexalphazcfog.h  flattexzc.h  flattexzcfog.h  flattexzcfog.inc
engine/fillers/float/sse/: flattexalphazc.h  flattexalphazcfog.h  flattexalphazcfog.inc  flattexzc.h  flattexzcfog.h
engine/fillers/integer/ammx/: flattexzc.h  flattexzc.inc
engine/fillers/integer/ref/: flattexalphazc.h  flattexalphazcfog.h  flattexzc.h  flattexzcfog.h
engine/fillers/integer/sse/: flattexalphazc.h  flattexalphazcfog.h  flattexzc.h  flattexzc.inc  flattexzcfog.h  flattexzcfog.inc
examples/: .gitignore  CMakeLists.txt
examples/cube/: CMakeLists.txt  build.bat  cube.cbp  cube.cpp  cube_unix.cpp  cube_win.cpp  readme.txt
examples/cube/assets/: Thumbs.db  crate.blend  crate.mtl
examples/destroyer/: CMakeLists.txt  destroyer.cpp
examples/destroyer/assets/: destroyer.mtl  launcher.mtl  shuttle-propcage.mtl  shuttle-propenergy.mtl  skybox.mtl
support/: Dockerfile.amiga  build-amiga.sh
tools/: collisions.cpp  collisions.h  physics.cpp  physics.h  solid.cpp  solid.h  timing.cpp  timing.h  timing_amiga.cpp  timing_unix.cpp  timing_win.cpp
vs/cube/: Cube.sln  Cube.vcxproj  Cube.vcxproj.filters  cube_win.cpp  readme.txt
vs/cube/Debug/: Cube.ilk  Cube.pch  vc141.idb
vs/cube/Debug/Cube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cube.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
