############################################################################### 
# le3d - LightEngine 3D
# Andreas Streichardt <andreas@mop.koeln>
# twitter: @m0ppers
# website: https://mop.koeln
# copyright Andreas Streichardt 2018
# A straightforward C++ 3D software engine for real-time graphics.
# CMakeLists.txt - examples directory 
############################################################################### 

add_subdirectory(cube)   

